Fixed link typo in rust

--- a/content/code/rust/installation.mdx
+++ b/content/code/rust/installation.mdx
@@ -26,7 +26,7 @@ Si vous voyez ces informations, vous avez installé Rust avec succès ! Si vous 
 
 <C i={`echo $PATH`}></C>
 
-Si tout est correct et que Rust ne fonctionne toujours pas, il existe un certain nombre d'endroits où vous pouvez obtenir de l'aide. Découvrez comment entrer en contact avec d'autres Rustacés (un surnom idiot que nous appelons nous-mêmes) sur (la page de la communauté)[https://www.rust-lang.org/community].
+Si tout est correct et que Rust ne fonctionne toujours pas, il existe un certain nombre d'endroits où vous pouvez obtenir de l'aide. Découvrez comment entrer en contact avec d'autres Rustacés (un surnom idiot que nous appelons nous-mêmes) sur [la page de la communauté](https://www.rust-lang.org/community).
 
 ## Mise à jour et désinstallation
 
