Fixed size heading

--- a/content/code/rust/installation.mdx
+++ b/content/code/rust/installation.mdx
@@ -16,7 +16,7 @@ nav: installation
 
 Les utilisateurs de Linux doivent généralement installer GCC ou Clang, selon la documentation de leur distribution. Par exemple, si vous utilisez Ubuntu, vous pouvez installer le package `build-essential`.
 
-### Dépannage
+## Dépannage
 
 <C i={`rustc --version`}>Pour vérifier si Rust est correctement installé.</C>
 
