--- a/content/code/rust/installation.mdx
+++ b/content/code/rust/installation.mdx
@@ -22,7 +22,7 @@ Les utilisateurs de Linux doivent généralement installer GCC ou Clang, selon l
 
 Vous devriez voir le numéro de version, le hash de validation et la date de validation de la dernière version stable publiée, au format suivant : `rustc x.y.z (abcabcabc yyyy-mm-dd)`
 
-Si vous voyez ces informations, vous avez installé Rust avec succès ! Si vous ne voyez pas ces informations, vérifiez que Rust se trouve dans votre variable système %PATH% comme suit.
+Si vous voyez ces informations, vous avez installé Rust avec succès ! Si vous ne voyez pas ces informations, vérifiez que Rust se trouve dans votre variable système `%PATH%` comme suit.
 
 <C i={`echo $PATH`}></C>
 
