Renamed vscode to official typo

--- a/content/code/c-sharp/vscode.mdx
+++ b/content/code/c-sharp/vscode.mdx
@@ -1,7 +1,7 @@
 ---
 sort: 3
-title: Intégration avec VSCode
-nav: vscode
+title: Intégration avec VS Code
+nav: VS Code
 ---
 
 ## Extensions à installer
