--- a/content/cli/editeurs/vim/mouvements/bases.mdx
+++ b/content/cli/editeurs/vim/mouvements/bases.mdx
@@ -1,7 +1,7 @@
 ---
-sort: 16
-title: Vim
-nav: vim
+sort: 2
+title: Bases
+nav: bases
 ---
 
 Vim est un éditeur de texte, c’est-à-dire un logiciel permettant la manipulation de fichiers texte. Il est directement inspiré de vi dont il est le clone le plus populaire. Chaque commande est préfixé par le mode auquel il appartient.
@@ -15,5 +15,3 @@ Vim est un éditeur de texte, c’est-à-dire un logiciel permettant la manipula
 <C i={`yy`} env={`[NORMAL]`}>Duplique la ligne où se trouve le curseur.</C>
 
 <C i={`Shift + [h, l]`} env={`[NORMAL]`}>Permet de se déplacer au début ou à la fin du fichier.</C>
-
-
