--- a/content/cli/editeurs/vim/mouvements/bases.mdx
+++ b/content/cli/editeurs/vim/mouvements/bases.mdx
@@ -14,4 +14,12 @@ Vim est un éditeur de texte, c’est-à-dire un logiciel permettant la manipula
 
 <C i={`yy`} env={`[NORMAL]`}>Duplique la ligne où se trouve le curseur.</C>
 
+<C i={`p`} env={`[NORMAL]`}>Copie le contenu du buffer.</C>
+
+<C i={`I`} env={`[NORMAL]`}>Place le curseur en début de ligne et active le mode `INSERT`.</C>
+
+<C i={`A`} env={`[NORMAL]`}>Place le curseur en fin de ligne et active le mode `INSERT`.</C>
+
+<C i={`f<lettre>`} env={`[NORMAL]`}>Place le curseur sur la prochaine lettre.</C>
+
 <C i={`Shift + [h, l]`} env={`[NORMAL]`}>Permet de se déplacer au début ou à la fin du fichier.</C>
