--- a/content/cli/editeurs/vim/mouvements/bases.mdx
+++ b/content/cli/editeurs/vim/mouvements/bases.mdx
@@ -22,4 +22,10 @@ Vim est un éditeur de texte, c’est-à-dire un logiciel permettant la manipula
 
 <C i={`f<lettre>`} env={`[NORMAL]`}>Place le curseur sur la prochaine lettre.</C>
 
+<C i={`F<lettre>`} env={`[NORMAL]`}>Place le curseur sur la précédente lettre.</C>
+
+<C i={`df<lettre>`} env={`[NORMAL]`}>Supprime tous depuis le curseur jusqu'à la prochaine lettre.</C>
+
+<C i={`dF<lettre>`} env={`[NORMAL]`}>Supprime tous depuis le curseur jusqu'à la précédente lettre.</C>
+
 <C i={`Shift + [h, l]`} env={`[NORMAL]`}>Permet de se déplacer au début ou à la fin du fichier.</C>
