More basic commands

--- a/content/cli/editeurs/vim/mouvements/bases.mdx
+++ b/content/cli/editeurs/vim/mouvements/bases.mdx
@@ -29,3 +29,7 @@ Vim est un éditeur de texte, c’est-à-dire un logiciel permettant la manipula
 <C i={`dF<lettre>`} env={`[NORMAL]`}>Supprime tous depuis le curseur jusqu'à la précédente lettre.</C>
 
 <C i={`Shift + [h, l]`} env={`[NORMAL]`}>Permet de se déplacer au début ou à la fin du fichier.</C>
+
+<C i={`G`} env={`[NORMAL]`}>Déplace le curseur à la fin du fichier.</C>
+
+<C i={`gg`} env={`[NORMAL]`}>Déplace le curseur au début du fichier.</C>
