Test < and > escape

--- a/content/cli/editeurs/vim/mouvements/bases.mdx
+++ b/content/cli/editeurs/vim/mouvements/bases.mdx
@@ -20,9 +20,13 @@ Vim est un éditeur de texte, c’est-à-dire un logiciel permettant la manipula
 
 <C i={`A`} env={`[NORMAL]`}>Place le curseur en fin de ligne et active le mode `INSERT`.</C>
 
-<C i={`f<lettre>`} env={`[NORMAL]`}>Place le curseur sur la prochaine lettre.</C>
+<C i={`f<lettre>`} env={`[NORMAL]`}>Place le curseur sur la prochaine &#60;lettre&#62;.</C>
 
-<C i={`F<lettre>`} env={`[NORMAL]`}>Place le curseur sur la précédente lettre.</C>
+<C i={`F<lettre>`} env={`[NORMAL]`}>Place le curseur sur la précédente &#60;lettre&#62;.</C>
+
+<C i={`t<lettre>`} env={`[NORMAL]`}>Place le curseur juste avant la prochaine &#60;lettre&#62;.</C>
+
+<C i={`T<lettre>`} env={`[NORMAL]`}>Place le curseur juste avant la précédente &#60;lettre&#62;.</C>
 
 <C i={`df<lettre>`} env={`[NORMAL]`}>Supprime tous depuis le curseur jusqu'à la prochaine lettre.</C>
 
