--- a/content/cli/editeurs/vim/mouvements/avance-1.mdx
+++ b/content/cli/editeurs/vim/mouvements/avance-1.mdx
@@ -4,10 +4,16 @@ title: Avancé 1
 nav: avancé 1
 ---
 
-Vim est un éditeur de texte, c’est-à-dire un logiciel permettant la manipulation de fichiers texte. Il est directement inspiré de vi dont il est le clone le plus populaire. Chaque commande est préfixé par le mode auquel il appartient.
+Voici quelques commandes avancées pour la sélection.
 
-<C i={`vi{`} env={`[NORMAL]`}>Sélectionne tous le texte contenu dans une paire d'accolade, très utile pour séléctionner rapidement du code.</C>
+<C i={`viw`} env={`[NORMAL]`}>Sélectionne le mot entièrement peu importe la position du curseur.</C>
 
-<C i={`vi(`} env={`[NORMAL]`}>Sélectionne tous le texte contenu dans une paire de parenthèse.</C>
+<C i={`yiw`} env={`[NORMAL]`}>Copie le mot entièrement peu importe la position du curseur.</C>
 
-<C i={`vi[`} env={`[NORMAL]`}>Sélectionne tous le texte contenu dans une paire de crochets.</C>
+<C i={`vi{`} env={`[NORMAL]`}>Sélectionne tous le texte contenu dans une paire d'accolades. Fonctionne aussi avec les parenthèse et crochets.</C>
+
+<C i={`va{`} env={`[NORMAL]`}>Identique à la commande ci-dessus mais inclut la paire de charactères.</C>
+
+<C i={`yi{`} env={`[NORMAL]`}>Copie tous le texte contenu dans une paire d'accolades. Fonctionne aussi avec les parenthèse et crochets.</C>
+
+<C i={`va{`} env={`[NORMAL]`}>Identique à la commande ci-dessus mais inclut la paire de charactères.</C>
