--- a/content/cli/editeurs/vim/mouvements/index.mdx
+++ b/content/cli/editeurs/vim/mouvements/index.mdx
@@ -4,7 +4,11 @@ title: Mouvements
 nav: mouvements
 ---
 
-.
+Voici une sélection des mouvements utiles pour apprendre vim.
 
+## Ressources 
+
+- [Basic Vim Cheat Sheet](https://vim.rtorr.com/)
+- [Vim as your editor](https://www.youtube.com/playlist?list=PLm323Lc7iSW_wuxqmKx_xxNtJC_hJbQ7R)
 
 
