--- a/content/cli/tmux.mdx
+++ b/content/cli/tmux.mdx
@@ -13,10 +13,10 @@ Tmux est un multiplexeur de terminaux libre en mode texte. Il permet d'utiliser 
 
 <C i={`tmux list-keys`}>Liste les raccourcis actuels</C>
 
-<C i={`Ctrl-b`}>
-  Connue comme le `PREFIX` ou `r` permettant d'activer d'autres commandes relatives à
-  TMUX. Cette combinaison est accessible uniquement à l'intérieur d'une instance
-  Tmux et peut être changée pour plus de convenance.
+<C i={`Ctrl-b`} env={`[TMUX]`}>
+  Connue comme le `PREFIX` ou `r` permettant d'activer d'autres commandes
+  relatives à TMUX. Cette combinaison est accessible uniquement à l'intérieur
+  d'une instance Tmux et peut être changée pour plus de convenance.
 </C>
 
 ## Session
@@ -46,4 +46,3 @@ Tmux est un multiplexeur de terminaux libre en mode texte. Il permet d'utiliser 
 ## fenêtre
 
 ## Panneau
-
