--- a/content/cli/tmux.mdx
+++ b/content/cli/tmux.mdx
@@ -39,7 +39,7 @@ Tmux est un multiplexeur de terminaux libre en mode texte. Il permet d'utiliser 
   Renomme la session
 </C>
 
-<C i={`[PREFIX] + ([CTRL + R])`} env={`[TMUX]`}>
+<C i={`[PREFIX] + ([Ctrl-r)`} env={`[TMUX]`}>
   Restaure toutes les sessions, fenêtres et panneaux.
 </C>
 
