--- a/content/cli/editeurs/vim/mouvements/index.mdx
+++ b/content/cli/editeurs/vim/mouvements/index.mdx
@@ -4,11 +4,15 @@ title: Mouvements Vim
 nav: mouvements
 ---
 
+Les mouvements Vim sont à différencier de l'éditeur Vim. Il existe pour tous les IDEs modernes des extensions Vim qui permetent d'obtenir les mêmes mouvements que dans l'éditeur Vim.
+
+Voici l'anatomie d'un mouvement vim:
+
+`COMMAND` `COUNT` `ACTION`
+
 Voici une sélection des mouvements utiles pour apprendre vim.
 
-## Ressources 
+## Ressources
 
 - [Basic Vim Cheat Sheet](https://vim.rtorr.com/)
 - [Vim as your editor](https://www.youtube.com/playlist?list=PLm323Lc7iSW_wuxqmKx_xxNtJC_hJbQ7R)
-
-
