--- a/content/cli/editeurs/vim/mouvements/index.mdx
+++ b/content/cli/editeurs/vim/mouvements/index.mdx
@@ -6,9 +6,7 @@ nav: mouvements
 
 Les mouvements Vim sont à différencier de l'éditeur Vim. Il existe pour tous les IDEs modernes des extensions Vim qui permetent d'obtenir les mêmes mouvements que dans l'éditeur Vim.
 
-Voici l'anatomie d'un mouvement vim:
-
-`COMMAND` `COUNT` `ACTION`
+Voici l'anatomie d'un mouvement vim: `COMMAND` `COUNT` `ACTION`
 
 Voici une sélection des mouvements utiles pour apprendre vim.
 
