--- a/content/cli/editeurs/vim/mouvements/avance-2.mdx
+++ b/content/cli/editeurs/vim/mouvements/avance-2.mdx
@@ -8,3 +8,5 @@ nav: avancé 2
 
 <C i={`Ctrl-I`} env={`[NORMAL]`}>Aller à  l'emplacement suivant.</C>
 
+<C i={`ddp`} env={`[NORMAL]`}>Échange 2 lignes entre elles. Le curseur doit se trouvé sur la 1ère ligne.</C>
+
