--- a/content/cli/editeurs/vim/mouvements/bases.mdx
+++ b/content/cli/editeurs/vim/mouvements/bases.mdx
@@ -10,7 +10,9 @@ Voici quelques commandes de bases.
 
 <C i={`x, dw, dd`} env={`[NORMAL]`}>Supprime une lettre, un mot ou une ligne entière.</C>
 
-<C i={`u`} env={`[NORMAL]`}>Équivalent à `undo`.</C>
+<C i={`u`} env={`[NORMAL]`}>`undo`.</C>
+
+<C i={`Ctrl-r`} env={`[NORMAL]`}>`redo`.</C>
 
 <C i={`yy`} env={`[NORMAL]`}>Duplique la ligne où se trouve le curseur.</C>
 
@@ -23,6 +25,10 @@ Voici quelques commandes de bases.
 <C i={`o`} env={`[NORMAL]`}>Ajoute une nouvelle ligne en dessous de la ligne courante et bascule en mode `INSERT`</C>
 
 <C i={`O`} env={`[NORMAL]`}>Ajoute une nouvelle ligne au dessus de la ligne courante et bascule en mode `INSERT`</C>
+
+<C i={`r<lettre>`} env={`[NORMAL]`}>Remplace la lettre qui se trouve sous le curseur par la nouvelle.</C>
+
+<C i={`R<lettre>`} env={`[NORMAL]`}>Remplace plus d'un charactère, `ESC` permet de quitter.</C>
 
 <C i={`f<lettre>`} env={`[NORMAL]`}>Place le curseur sur la prochaine &#60;lettre&#62;.</C>
 
