--- a/content/cli/editeurs/vim/mouvements/avance-1.mdx
+++ b/content/cli/editeurs/vim/mouvements/avance-1.mdx
@@ -23,3 +23,5 @@ Voici quelques commandes avancées pour la sélection.
 <C i={`ci"`} env={`[NORMAL]`}>Supprime tout se qui se trouve entre une paire de charactère et bascule en mode `INSERT`.</C>
 
 <C i={`ca"`} env={`[NORMAL]`}>Identique à la commande précédente mais inclue le caractère de sélection.</C>
+
+<C i={`s`} env={`[NORMAL]`}>Supprime la séléction courante et bascule en mode `INSERT`.</C>
