--- a/content/cli/editeurs/vim/mouvements/avance-2.mdx
+++ b/content/cli/editeurs/vim/mouvements/avance-2.mdx
@@ -10,3 +10,9 @@ nav: avancé 2
 
 <C i={`ddp`} env={`[NORMAL]`}>Échange 2 lignes entre elles. Le curseur doit se trouvé sur la 1ère ligne.</C>
 
+<C i={`vip`} env={`[NORMAL]`}>Séléctionne un paragraphe ou un bloc de code.</C>
+
+<C i={`vap`} env={`[NORMAL]`}>Séléctionne un paragraphe ou un bloc de code avec l'espace en dessous.</C>
+
+<C i={`D`} env={`[NORMAL]`}>Efface tous depuis le curseur jusqu'au bout de la ligne.</C>
+
