--- a/content/cli/editeurs/vim/mouvements/html.mdx
+++ b/content/cli/editeurs/vim/mouvements/html.mdx
@@ -5,3 +5,7 @@ nav: html
 ---
 
 <C i={`vat`} env={`[NORMAL]`}>Sélectionne une balise et son contenu.</C>
+
+<C i={`vit`} env={`[NORMAL]`}>Sélectionne une balise sans son contenu.</C>
+
+
