--- a/content/cli/editeurs/vim/mouvements/avance-2.mdx
+++ b/content/cli/editeurs/vim/mouvements/avance-2.mdx
@@ -16,3 +16,6 @@ nav: avancé 2
 
 <C i={`D`} env={`[NORMAL]`}>Efface tous depuis le curseur jusqu'au bout de la ligne.</C>
 
+<C i={`_D`} env={`[NORMAL]`}>Efface une ligne entière en préservant le saut de ligne.</C>
+
+
