--- a/content/cli/editeurs/vim/mouvements/html.mdx
+++ b/content/cli/editeurs/vim/mouvements/html.mdx
@@ -1,11 +1,17 @@
 ---
-sort: 4 
+sort: 4
 title: Vim - html
-nav: html 
+nav: html
 ---
 
-<C i={`vat`} env={`[NORMAL]`}>Sélectionne une balise et son contenu.</C>
+<C i={`vat`} env={`[NORMAL]`}>
+  Sélectionne une balise et son contenu.
+</C>
 
-<C i={`vit`} env={`[NORMAL]`}>Sélectionne une balise sans son contenu.</C>
+<C i={`vit`} env={`[NORMAL]`}>
+  Sélectionne une balise sans son contenu.
+</C>
 
+## Sources
 
+- [Vim 101: Efficient HTML Editing with Text Objects](https://medium.com/usevim/vim-101-efficient-html-editing-with-text-objects-1571734718e3)
