typo html vim moves

--- a/content/cli/editeurs/vim/mouvements/html.mdx
+++ b/content/cli/editeurs/vim/mouvements/html.mdx
@@ -5,11 +5,11 @@ nav: html
 ---
 
 <C i={`vat`} env={`[NORMAL]`}>
-  Sélectionne une balise et son contenu.
+  Séléctionne le contenu de la balise et la balise avec.
 </C>
 
 <C i={`vit`} env={`[NORMAL]`}>
-  Sélectionne une balise sans son contenu.
+  Séléctionne le contenu de la balise
 </C>
 
 ## Sources
