--- a/content/cli/editeurs/vim/mouvements/avance-1.mdx
+++ b/content/cli/editeurs/vim/mouvements/avance-1.mdx
@@ -16,7 +16,7 @@ Voici quelques commandes avancées pour la sélection.
 
 <C i={`yi{`} env={`[NORMAL]`}>Copie tous le texte contenu dans une paire d'accolades. Fonctionne aussi avec les parenthèse et crochets.</C>
 
-<C i={`va{`} env={`[NORMAL]`}>Identique à la commande ci-dessus mais inclut la paire de charactères.</C>
+<C i={`ya{`} env={`[NORMAL]`}>Identique à la commande ci-dessus mais inclut la paire de charactères.</C>
 
 <C i={`ciw`} env={`[NORMAL]`}>Coupe le mot courant peut importe la position du curseur et bascule en mode `INSERT`.</C>
 
