--- a/content/cli/git/oh-my-zsh.mdx
+++ b/content/cli/git/oh-my-zsh.mdx
@@ -7,6 +7,7 @@ sort: 90
 Oh-My-Zsh comprend des raccourcis pour Git et permettent de taper la plupart des commandes en seulement quelques charactères.
 
 <C i={`gst`}>Raccourci pour `git status`</C>
+<C i={`ga`}>Raccourci pour `git add`</C>
 <C i={`gcb ma-branche`}>Raccourci pour `git checkout -b ma-branche`</C>
 <C i={`gp`}>Raccourci pour `git push`</C>
 <C i={`gl`}>Raccourci pour `git pull`</C>
