--- a/content/cli/git/oh-my-zsh.mdx
+++ b/content/cli/git/oh-my-zsh.mdx
@@ -8,6 +8,8 @@ Oh-My-Zsh comprend des raccourcis pour Git et permettent de taper la plupart des
 
 <C i={`gst`}>Raccourci pour `git status`</C>
 <C i={`ga`}>Raccourci pour `git add`</C>
+<C i={`gcm`}>Raccourci pour `git checkout <master|main>`</C>
+<C i={`gco ma-branche`}>Raccourci pour `git checkout ma-branche`</C>
 <C i={`gcb ma-branche`}>Raccourci pour `git checkout -b ma-branche`</C>
 <C i={`gp`}>Raccourci pour `git push`</C>
 <C i={`gl`}>Raccourci pour `git pull`</C>
