--- a/content/cli/vim/mouvements/bases.mdx
+++ b/content/cli/vim/mouvements/bases.mdx
@@ -16,7 +16,9 @@ Voici quelques commandes de bases.
 
 <C i={`yy`} env={`[NORMAL]`}>Duplique la ligne où se trouve le curseur.</C>
 
-<C i={`p`} env={`[NORMAL]`}>Copie le contenu du buffer.</C>
+<C i={`p`} env={`[NORMAL]`}>Copie le contenu du buffer après le curseur.</C>
+
+<C i={`P`} env={`[NORMAL]`}>Copie le contenu du buffer avant le curseur.</C>
 
 <C i={`I`} env={`[NORMAL]`}>Place le curseur en début de ligne et active le mode `INSERT`.</C>
 
