tmux and neovim

--- a/content/cli/tmux.mdx
+++ b/content/cli/tmux.mdx
@@ -9,6 +9,8 @@ Tmux est un multiplexeur de terminaux libre en mode texte. Il permet d'utiliser 
 
 <C i={`~/.tmux.conf`}>Emplacement du fichier de configuration.</C>
 
+<C i={`tmux source-file ~/.tmux.conf`}>Recharge la configuration du fichier de configuration</C>
+
 <C i={`tmux -V`}>Renvoi la version courante.</C>
 
 <C i={`tmux list-keys`}>Liste les raccourcis actuels</C>
@@ -18,6 +20,7 @@ Tmux est un multiplexeur de terminaux libre en mode texte. Il permet d'utiliser 
   relatives à TMUX. Cette combinaison est accessible uniquement à l'intérieur
   d'une instance Tmux et peut être changée pour plus de convenance.
 </C>
+
 
 ## Session
 
