--- a/content/cli/tmux.mdx
+++ b/content/cli/tmux.mdx
@@ -48,4 +48,9 @@ Tmux est un multiplexeur de terminaux libre en mode texte. Il permet d'utiliser 
 
 ## fenêtre
 
+
+<C i={`<Prefix> + n`}>Passer à la fenêtre suivante.</C>
+<C i={`<Prefix> + p`}>Passer à la fenêtre précédente.</C>
+
+
 ## Panneau
