Added ansible content

--- a/content/cli/ansible/index.mdx
+++ b/content/cli/ansible/index.mdx
@@ -19,4 +19,10 @@ image: cfd4e18e-94ce-4dfd-98cf-9e0701251ba1
 
 <C i={`ansible-playbook main.yml --limit test`}>Joue le playbook `main.yml` en le limitant au groupe `test`.</C>
 
+## Voir
 
+- https://github.com/alexandre-dos-reis/ansible-starter
+- https://github.com/alexandre-dos-reis/srv-ansible-caddy-docker
+- https://github.com/alexandre-dos-reis/ansible-101
+- https://github.com/alexandre-dos-reis/srv001-ansible
+- https://github.com/alexandre-dos-reis/ansible-tutorial
