--- a/content/cli/tmux.mdx
+++ b/content/cli/tmux.mdx
@@ -50,7 +50,7 @@ Crée une nouvelle session en étant déjà dans une session Tmux et permet de l
   Restaure toutes les sessions, fenêtres et panneaux.
 </C>
 
-## fenêtre
+## Fenêtre
 
 
 <C i={`<Prefix> + n`}>Passer à la fenêtre suivante.</C>
