vim content typo

--- a/content/cli/vim/commands.mdx
+++ b/content/cli/vim/commands.mdx
@@ -1,7 +1,7 @@
 ---
 sort: 10
 title: Commandes
-nav: commndes
+nav: commandes
 ---
 
 Au delà de tous les modes accessibles, il est possible de rentrer des commandes directement dans Vim pour déclencher des actions ou des comportements.
