--- a/content/cli/tmux.mdx
+++ b/content/cli/tmux.mdx
@@ -58,3 +58,5 @@ Crée une nouvelle session en étant déjà dans une session Tmux et permet de l
 
 
 ## Panneau
+
+<C i={`<Prefix> + z`}>Permet de maximiser un panneau. C'est la même commande pour revenir à l'état précédent.</C>
