--- a/content/cli/vim/mouvements/avance-2.mdx
+++ b/content/cli/vim/mouvements/avance-2.mdx
@@ -18,4 +18,9 @@ nav: avancé 2
 
 <C i={`_D`} env={`[NORMAL]`}>Efface une ligne entière en préservant le saut de ligne.</C>
 
+<C i={`gU`} env={`[NORMAL]`}>Transforme une séléction en majuscule. Peux aussi s'effectuer avec un mouvement par exemple : `gUw`</C>
+
+<C i={`gu`} env={`[NORMAL]`}>Idem que la commande précédente mais effectue la transformation en minuscule.</C>
+
+<C i={`Ctrl-w`} env={`[INSERT]`}>Supprime le mot présent sur le curseur.</C>
 
