--- a/content/cli/fish/index.mdx
+++ b/content/cli/fish/index.mdx
@@ -15,4 +15,4 @@ Certaines des caractéristiques particulières du Fish sont :
 
 ## Sources
 
-- https://reckoning.dev/blog/fish-shell/#additional-functions-aliases 
+- [From zsh to fish: A Complete Setup Guide](https://reckoning.dev/blog/fish-shell)
