added vim commands

--- a/content/cli/vim/commands.mdx
+++ b/content/cli/vim/commands.mdx
@@ -9,4 +9,9 @@ Au delà de tous les modes accessibles, il est possible de rentrer des commandes
 Cette fonctionnalité s'active avec le charactère `:` en mode `Normal`.
 
 <C i={`set wrap`}>Permet de déclencher un retour à la ligne lorsque le texte affiché dépasse les limites de la fenêtre</C>
+
 <C i={`set unwrap`}>L'inverse de la commande précédente.</C>
+
+<C i={`:%s/foo/bar/g`}>Trouve chaque occurence de `foo` et le replace avec `bar`.</C>
+
+<C i={`:6,10s/foo/bar/g`}>Idem que précédemment mais effectue la recherche pour les lignes 6 a 10 inclus.</C>
