--- a/content/cli/vim/commands.mdx
+++ b/content/cli/vim/commands.mdx
@@ -12,6 +12,6 @@ Cette fonctionnalité s'active avec le charactère `:` en mode `Normal`.
 
 <C i={`set unwrap`}>L'inverse de la commande précédente.</C>
 
-<C i={`:%s/foo/bar/g`}>Trouve chaque occurence de `foo` et le replace avec `bar`.</C>
+<C i={`:%s/foo/bar`}>Trouve chaque occurence de `foo` et le replace avec `bar`.</C>
 
-<C i={`:6,10s/foo/bar/g`}>Idem que précédemment mais effectue la recherche pour les lignes 6 a 10 inclus.</C>
+<C i={`:6,10s/foo/bar`}>Idem que précédemment mais effectue la recherche pour les lignes 6 a 10 inclus.</C>
