readme and docker swarm

--- a/content/cli/docker/swarm.mdx
+++ b/content/cli/docker/swarm.mdx
@@ -5,4 +5,6 @@ nav: swarm
 draft: true
 ---
 
-Todo...
+<C i={`docker swarm init`}>Initialise l'hote en mode swarm, par defaut ce noeud devient leader.</C>
+
+<C i={`docker node ls`}>Affiche la liste de tous les noeuds rattache a ce swarm.</C>
