--- a/content/cli/docker/swarm.mdx
+++ b/content/cli/docker/swarm.mdx
@@ -8,4 +8,4 @@ nav: swarm
 
 <C i={`docker node ls`}>Affiche la liste de tous les noeuds rattache à ce swarm.</C>
 
-<C i={`docker stack deploy -c compose.yml name_of_stack`}>Demarre une stack à partir d'un fichier docker-compose.</C>
+<C i={`docker stack deploy -c compose.yml name_of_stack`}>Démarre une stack à partir d'un fichier docker-compose.</C>
