--- a/content/cli/docker/swarm.mdx
+++ b/content/cli/docker/swarm.mdx
@@ -4,8 +4,8 @@ title: Docker Swarm
 nav: swarm
 ---
 
-<C i={`docker swarm init`}>Initialise l'hote en mode swarm, par defaut ce noeud devient leader.</C>
+<C i={`docker swarm init`}>Initialise l'hôte en mode swarm, par défaut ce noeud devient leader.</C>
 
-<C i={`docker node ls`}>Affiche la liste de tous les noeuds rattache à ce swarm.</C>
+<C i={`docker node ls`}>Affiche la liste de tous les noeuds rattaché à ce swarm.</C>
 
 <C i={`docker stack deploy -c compose.yml name_of_stack`}>Démarre une stack à partir d'un fichier docker-compose.</C>
