--- a/content/cli/tmux.mdx
+++ b/content/cli/tmux.mdx
@@ -5,6 +5,8 @@ title: tmux
 
 Tmux est un multiplexeur de terminaux libre en mode texte. Il permet d'utiliser plusieurs terminaux virtuels dans une seule fenêtre de terminal ou une session sur un terminal distant. Tmux peut gérer plusieurs sessions contenant des fenêtres, elle-même divisées en panneaux. [tmux cheat sheet](https://tmuxcheatsheet.com/)
 
+Le repo Github de [tmux](https://github.com/tmux/tmux).
+
 ## Générale
 
 <C i={`~/.tmux.conf`}>Emplacement du fichier de configuration.</C>
