--- a/content/cli/git/recettes.mdx
+++ b/content/cli/git/recettes.mdx
@@ -15,3 +15,9 @@ title: Recettes
 <C i={`git stash apply stash@{1}`}>
   To apply the correct stashed changes (now 2nd on the stack)
 </C>
+
+## Supprimer une branche locale et distante
+
+<C i={`git branch -d ma-branche`}>Supprime la branche locale</C>
+<C i={`git push origin --delete ma-branche`}>Supprime la branche distante.</C>
+
