--- a/content/cli/ansible/vault.mdx
+++ b/content/cli/ansible/vault.mdx
@@ -4,7 +4,7 @@ title: Ansible Vault
 nav: vault
 ---
 
-Ansible Vault est un des nombreux outils propose par Ansible. Vault est une mecanisme dé chiffrement permettant de ne pas exposer des données sensibles au public, très utile pour la conservation dans les dépōts Git. 
+Ansible Vault est un des nombreux outils propose par Ansible. Vault est un mécanisme de chiffrement permettant de ne pas exposer des données sensibles au public, utile lors du stockage dans un dépōt Git. 
 
 <C i={`ansible-vault encrypt secrets.yml`}>Permet de chiffrer le fichier `secrets.yml`.</C>
 
