--- a/content/cli/git/index.mdx
+++ b/content/cli/git/index.mdx
@@ -9,7 +9,9 @@ Git est un logiciel de gestion de versions décentralisé créé par Linus Torva
 
 <C i={`git init`}>Initie un dépôt git dans le dossier courant.</C>
 
-<C i={`git clone /path/to/repository`}>Crée une copie de votre dépôt local.</C>
+<C i={`git clone /path/to/repository`}>Clone un depot distant sur votre machine.</C>
+
+<C i={`git clone -b my-branch /path/to/repository`}>Clone une branche specifique.</C>
 
 <C i={`git clone username@host:/path/to/repository`}>
   Crée une copie depuis un serveur distant.
