--- a/content/cli/docker/docker-compose.mdx
+++ b/content/cli/docker/docker-compose.mdx
@@ -41,4 +41,6 @@ image: 7f9027cc-22de-4783-9708-46df73349cb2
 
 <C i={`docker-compose ps`}>Liste les conteneurs.</C>
 
+<C i={`docker-compose config`}>Valide le contenu du fichier docker-compose.</C>
+
 
