--- a/content/cli/base-de-donnees/postgres/index.mdx
+++ b/content/cli/base-de-donnees/postgres/index.mdx
@@ -1,7 +1,7 @@
 ---
 sort: 63
 title: PostGreSQL
-nav: pgsql
+nav: postgres
 ---
 
 PostgreSQL est un système de gestion de base de données relationnelle et objet (SGBDRO). C'est un outil libre disponible selon les termes d'une licence de type BSD.
