--- a/content/cli/git/commit.mdx
+++ b/content/cli/git/commit.mdx
@@ -5,3 +5,7 @@ nav: commit
 ---
 
 git commit
+
+<C i={`git commit -m "mon message" --no-verify`}>
+  Permet d'éviter le déclenchement des hooks git.
+</C>
