--- a/content/cli/git/worktree.mdx
+++ b/content/cli/git/worktree.mdx
@@ -12,6 +12,8 @@ git clone --bare git@github.com:user/project.git .bare
 echo "gitdir: ./.bare" > .git
 ```
 
+## Commandes usuelles
+
 <C i={`git worktree add <branche> <dossier>`}>
     Ajouter une branche au worktree.
 </C>
@@ -19,3 +21,8 @@ echo "gitdir: ./.bare" > .git
 <C i={`git worktree add -b <feature-branch> <branche-cible> <dossier>`}>
     Creer une nouvelle branche au worktree depuis une branche cible en precisant le chemin du dossier.
 </C>
+
+## Resources
+
+
+- [How I use git worktrees](https://nicknisi.com/posts/git-worktrees/)
