--- a/content/cli/git/worktree.mdx
+++ b/content/cli/git/worktree.mdx
@@ -26,3 +26,4 @@ echo "gitdir: ./.bare" > .git
 
 
 - [How I use git worktrees](https://nicknisi.com/posts/git-worktrees/)
+- [Working with Git Worktrees](https://chrisdicarlo.ca/blog/working-with-git-worktrees-part-2/)
