--- a/content/cli/vim/commands.mdx
+++ b/content/cli/vim/commands.mdx
@@ -15,3 +15,7 @@ Cette fonctionnalité s'active avec le charactère `:` en mode `Normal`.
 <C i={`:%s/foo/bar`}>Trouve chaque occurence de `foo` et le replace avec `bar`.</C>
 
 <C i={`:6,10s/foo/bar`}>Idem que précédemment mais effectue la recherche pour les lignes 6 a 10 inclus.</C>
+
+<C i={`:g/foo/d`}>Supprime toutes les lignes contenant le pattern `foo`</C>
+
+
