fix heading in git worktree

--- a/content/cli/git/worktree.mdx
+++ b/content/cli/git/worktree.mdx
@@ -1,10 +1,10 @@
 ---
-sort: 1000
 title: git worktree
+sort: 1000
 nav: worktree
 ---
 
-## Mise en place d'un depot `worktree`.
+## Mise en place d'un depot worktree.
 
 ```
 mkdir project && cd project
@@ -23,7 +23,6 @@ echo "gitdir: ./.bare" > .git
 </C>
 
 ## Resources
-
 
 - [How I use git worktrees](https://nicknisi.com/posts/git-worktrees/)
 - [Working with Git Worktrees](https://chrisdicarlo.ca/blog/working-with-git-worktrees-part-2/)
